# advent2016

./: Day07.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day22.hs  advent2016.cabal  stack.yaml
