name:                advent2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable day07
  main-is:             Day07.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , parsec
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell

executable day12
  main-is:             Day12.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable day14
  main-is:             Day14.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bytestring-lexing
                     , criterion
                     , cryptonite
                     , memory
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable day15
  main-is:             Day15.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable day16
  main-is:             Day16.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.8.1
                     , lens
  default-language:    Haskell2010

executable day17
  main-is:             Day17.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cryptonite
                     , memory
                     , range
  default-language:    Haskell2010
  default-extensions:  RecordWildCards

executable day18
  main-is:             Day18.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell

executable day19
  main-is:             Day19.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , split
  default-language:    Haskell2010

executable day22
  main-is:             Day22.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
